--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "exifr": "^7.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
